# Socialite

./: .dockerignore  .gitignore  .sesskey  Dockerfile  README.md  __init__.py  agent.py  app.py  config.py  db.py  main.py  middleware.py  models.py  pyproject.toml  requirements-api.txt  requirements.lock.txt  requirements.txt  scheduler.py  schemas.py  start.sh  ui_fasthtml.py
.streamlit/: config.toml
data/: knowledge.jsonl
providers/: base.py  eventbrite.py  icsfeed.py  kakava.py  mock_local.py  seatgeek.py  ticketmaster.py  web.py  web_discovery.py
routers/: __init__.py  agent.py  auth.py  events.py  metrics.py  notify.py  profile.py  saved.py
services/: __init__.py  aggregator.py  guardrails.py  http.py  metrics.py  normalize.py  notifier.py  rag.py  ratings.py  recommend.py  storage.py
tests/: test_guardrails.py  test_ranker.py
utils/: cache.py  http_client.py
