[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-agent-ai"
version = "0.1.0"
description = "Socialite backend + Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["social_agent_ai*"]
exclude = ["tests*"]
